--- a/Final_IS7024/Pages/Index.cshtml
+++ b/Final_IS7024/Pages/Index.cshtml
@@ -5,6 +5,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">XML & Webservices - Individual Assignment</h1>
+    <p>Click the following link to navigate to HTML Page: <a href="~/TvShow.html">Movies/Tv Shows</a></p>
+    <p>Click the following link to navigate to Shortcuts XML Page: <a href="/Shortcuts.xml">Team's favourite shortcuts</a></p>
 </div>
